--- a/THESIS/references.bib
+++ b/THESIS/references.bib
@@ -258,3 +258,28 @@
   author={Toffoli, Tommaso},
   year={1977}
 }
+
+@article{margolus1995cam,
+  title={CAM-8: a computer architecture based on cellular automata},
+  author={Margolus, Norman},
+  journal={arXiv preprint comp-gas/9509001},
+  year={1995}
+}
+
+@article{toffoli1984cam,
+  title={CAM: A high-performance cellular-automaton machine},
+  author={Toffoli, Tommaso},
+  journal={Physica D: Nonlinear Phenomena},
+  volume={10},
+  number={1-2},
+  pages={195--204},
+  year={1984},
+  publisher={Elsevier}
+}
+
+@book{hoekstra2010simulating,
+  title={Simulating complex systems by cellular automata},
+  author={Hoekstra, Alfons G and Kroc, Jiri and Sloot, Peter MA},
+  year={2010},
+  publisher={Springer}
+}
