--- a/THESIS/references.bib
+++ b/THESIS/references.bib
@@ -283,3 +283,11 @@
   year={2010},
   publisher={Springer}
 }
+
+@book{wolfram2002new,
+  title={A new kind of science},
+  author={Wolfram, Stephen},
+  volume={5},
+  year={2002},
+  publisher={Wolfram media Champaign, IL}
+}
